More Debug Info

--- a/MSVS-2017/Minecraft Server.vcxproj
+++ b/MSVS-2017/Minecraft Server.vcxproj
@@ -46,7 +46,7 @@
       <SDLCheck>true</SDLCheck>
     </ClCompile>
     <Link>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>DebugFull</GenerateDebugInformation>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
