--- a/MSVS-2017/Minecraft Server.vcxproj.filters
+++ b/MSVS-2017/Minecraft Server.vcxproj.filters
@@ -45,45 +45,51 @@
     <ClCompile Include="..\src\server\serverevents.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="..\src\data\block\blocks.cpp">
+    <ClCompile Include="..\src\data\biomes.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\src\data\blocks.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\src\data\entity\blockentities.h">
+    <ClInclude Include="..\include\data\blocks.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\client\client.h">
+    <ClInclude Include="..\include\client\client.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\client\clientevents.h">
+    <ClInclude Include="..\include\client\clientevents.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\data\datatypes.h">
+    <ClInclude Include="..\include\data\datatypes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\misc\deprecated.h">
+    <ClInclude Include="..\include\data\entity\entities.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\data\entity\entities.h">
+    <ClInclude Include="..\include\server\eventhandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\server\eventhandler.h">
+    <ClInclude Include="..\include\server\networkhandler.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\server\networkhandler.h">
+    <ClInclude Include="..\include\server\server.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\server\server.h">
+    <ClInclude Include="..\include\server\serverevents.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\server\serverevents.h">
+    <ClInclude Include="..\include\data\biomes.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\server\serverstate.h">
+    <ClInclude Include="..\include\data\entity\blockentities.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\src\data\block\blocks.h">
+    <ClInclude Include="..\include\debug.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\include\deprecated.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
