--- a/MSVS-2017/Minecraft Server.vcxproj
+++ b/MSVS-2017/Minecraft Server.vcxproj
@@ -44,10 +44,11 @@
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)/../include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>DebugFull</GenerateDebugInformation>
+      <AdditionalDependencies>$(OutDir)Bare Bones Minecraft Server.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -57,33 +58,24 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)/../include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>$(OutDir)Bare Bones Minecraft Server.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\src\client\client.cpp" />
-    <ClCompile Include="..\src\client\clientevents.cpp" />
-    <ClCompile Include="..\src\data\biomes.cpp" />
-    <ClCompile Include="..\src\data\blocks.cpp" />
-    <ClCompile Include="..\src\data\datatypes.cpp" />
-    <ClCompile Include="..\src\data\entity\blockentities.cpp" />
-    <ClCompile Include="..\src\data\entity\entities.cpp" />
-    <ClCompile Include="..\src\main.cpp" />
-    <ClCompile Include="..\src\server\eventhandler.cpp" />
-    <ClCompile Include="..\src\server\networkhandler.cpp" />
-    <ClCompile Include="..\src\server\server.cpp" />
-    <ClCompile Include="..\src\server\serverevents.cpp" />
+    <ClCompile Include="..\main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\client\client.h" />
     <ClInclude Include="..\include\client\clientevents.h" />
     <ClInclude Include="..\include\data\biomes.h" />
     <ClInclude Include="..\include\data\blocks.h" />
+    <ClInclude Include="..\include\data\networkpackets.h" />
     <ClInclude Include="..\include\data\datatypes.h" />
     <ClInclude Include="..\include\data\entity\blockentities.h" />
     <ClInclude Include="..\include\data\entity\entities.h" />
