--- a/MSVS-2013/Minecraft Server.vcxproj
+++ b/MSVS-2013/Minecraft Server.vcxproj
@@ -47,7 +47,7 @@
       <AdditionalIncludeDirectories>$(ProjectDir)/../include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <GenerateDebugInformation>DebugFull</GenerateDebugInformation>
+      <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>$(OutDir)Bare Bones Minecraft Server.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
@@ -61,7 +61,7 @@
       <AdditionalIncludeDirectories>$(ProjectDir)/../include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
-      <GenerateDebugInformation>true</GenerateDebugInformation>
+      <GenerateDebugInformation>false</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <AdditionalDependencies>$(OutDir)Bare Bones Minecraft Server.lib;%(AdditionalDependencies)</AdditionalDependencies>
