Multi-threaded Madness Update - Fixed #1 - EventHandler::triggerEvent -> EventHandler::runOnServerThread - EventHandler::clients changed type to AtomicSet - Client::pos -> Client::position - Added Client::loadedChunks - Made Client thread-safe - Added getters and setters to all of Client's variables - Created BitStream test - Created VarNum test - Created JobQueue and simple test - Created AtomicSet and simple test - Created parseFloat and parseDouble in networkhandler.cpp - Created ClientComparator in client.h - Created EventHandler::playerLook - Created EventHandler::playerPosition - Created EventHandler::playerPositionAndLook - Created EventHandler::playerOnGround - Created NetworkHandler::sendUnloadChunk - Rewrote over half of the server code... and managed to break it

--- a/MSVS-2013/Bare-Bones-Minecraft-Server/Bare Bones Minecraft Server.vcxproj
+++ b/MSVS-2013/Bare-Bones-Minecraft-Server/Bare Bones Minecraft Server.vcxproj
@@ -151,10 +151,12 @@
   <ItemGroup>
     <ClInclude Include="..\..\include\client\client.h" />
     <ClInclude Include="..\..\include\client\clientevents.h" />
+    <ClInclude Include="..\..\include\data\atomicset.h" />
     <ClInclude Include="..\..\include\data\biomes.h" />
     <ClInclude Include="..\..\include\data\blocks.h" />
     <ClInclude Include="..\..\include\data\datatypes.h" />
     <ClInclude Include="..\..\include\data\bitstream.h" />
+    <ClInclude Include="..\..\include\data\jobqueue.h" />
     <ClInclude Include="..\..\include\data\entity\blockentities.h" />
     <ClInclude Include="..\..\include\data\entity\entities.h" />
     <ClInclude Include="..\..\include\data\networkpackets.h" />
@@ -172,6 +174,7 @@
     <ClCompile Include="..\..\src\data\blocks.cpp" />
     <ClCompile Include="..\..\src\data\datatypes.cpp" />
     <ClCompile Include="..\..\src\data\bitstream.cpp" />
+    <ClCompile Include="..\..\src\data\jobqueue.cpp" />
     <ClCompile Include="..\..\src\data\entity\blockentities.cpp" />
     <ClCompile Include="..\..\src\data\entity\entities.cpp" />
     <ClCompile Include="..\..\src\server\eventhandler.cpp" />
