Compile for MSVS2017

--- a/MSVS-2017/Minecraft Server.vcxproj.filters
+++ b/MSVS-2017/Minecraft Server.vcxproj.filters
@@ -89,5 +89,8 @@
     <ClInclude Include="..\tests\varnum\varnumtest.h">
       <Filter>Test Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\data\atomicset.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
