--- a/MSVS-2017/Bare-Bones-Minecraft-Server/Bare Bones Minecraft Server.vcxproj.filters
+++ b/MSVS-2017/Bare-Bones-Minecraft-Server/Bare Bones Minecraft Server.vcxproj.filters
@@ -66,8 +66,14 @@
     <ClInclude Include="..\..\include\data\atomicset.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\lib\fastnoise\fastnoise.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\lib\fastnoise\fastnoise.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
     <ClCompile Include="..\..\src\server\networkhandler.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
